--- a/wp-content/themes/hannashints/src/scss/components/_navigation.scss
+++ b/wp-content/themes/hannashints/src/scss/components/_navigation.scss
@@ -8,6 +8,128 @@
 		position: relative;
     	top: 0;
 	}
+
+	.popout {
+		@include breakpoint(small) {
+			position: fixed;
+			height: 100%;
+			width: 100%;
+			background: rgba(25, 25, 25, .9);
+			color: white;
+			top: 0px;
+			left: -100%;
+			overflow:auto;
+			transition: all 0.3s ease-in-out;
+			padding-top: 60px;
+			z-index: 9;
+
+			&.is-open {
+				left: 0;
+				display: flex;
+				flex-wrap: wrap;
+				flex-direction: column;
+			}
+		}
+
+		> div {
+			display: inline-block;
+			vertical-align: middle;
+
+			@include breakpoint(small) {
+				display: block;
+				order: 2;
+			}
+		}
+
+		.block--search {
+			position: relative;
+
+			@include breakpoint(small) {
+				order: 1;
+				width: 100%;
+			}
+
+			.search--toggle {
+				background: url('./imgs/lens.png') 0 0 no-repeat transparent;
+				height: 26px;
+				width: 26px;
+				cursor: pointer;
+
+				@include breakpoint(small) {
+					display: none;
+				}
+			}
+
+			form {
+				height: 0;
+				padding: 0;
+				overflow: hidden;
+				position: absolute;
+				margin-top: 22px;
+				right: calc(100% - 32px);
+				width: 320px;
+				background: #fff;
+				box-shadow: 1px 2px 5px rgba(0,0,0,.5);
+				transition: all 0.3s ease-in-out;
+
+				@include breakpoint(small) {
+					height: auto;
+					width: calc(100% - 30px);
+					position: relative;
+					left: auto;
+					right: auto;
+					margin: auto;
+					box-shadow: none;
+					border: none;
+					padding: 10px;
+					background: none;
+				}
+
+				[type="search"] {
+					width: 300px;
+					border-width: 0 0 1px 0;
+					border-radius: 0;
+
+					@include breakpoint(small) {
+						width: 100%;
+						border-width: 0 0 1px;
+						background: none;
+					}
+				}
+
+				[type="submit"] {
+					@include inline-svg-icon("arrow-r", white, center, 18px);
+
+					position: absolute;
+					font-size: 0;
+					height: 32px;
+					width: 32px;
+					right: 10px;
+					bottom: 10px;
+					border-radius: 0;
+					border: none;
+					background-color: $color-search-bg;
+
+					@include breakpoint(small) {
+						background: url('./imgs/lens_white.png') 0 0 no-repeat transparent;
+						height: 26px;
+						width: 26px;
+						bottom: 13px;
+						cursor: pointer;
+						color: #fff;
+					}
+				}
+			}
+
+			&.is-open {
+				form {
+					height: auto;
+					padding: 10px;
+					overflow: visible;
+				}
+			}
+		}
+	}
 }
 
 .site-branding {
@@ -41,24 +163,6 @@
 }
 
 @include breakpoint(small) {
-	.popout {
-		position: fixed;
-		height: 100%;
-		width: 100%;
-		background: rgba(25, 25, 25, .9);
-		color: white;
-		top: 0px;
-		left: -100%;
-		overflow:auto;
-		transition: all 0.3s ease-in-out;
-		padding-top: 60px;
-		z-index: 9;
-
-		&.is-open {
-			left: 0;
-		}
-	}
-
 	#toggle {
 		position: absolute;
 		top: 10px;
@@ -84,7 +188,7 @@
 				background-color: #fff;
 
 				&:first-child {
-					transform: rotate(-45deg) translate(-5px, 3px);
+					transform: rotate(-45deg) translate(-4px, 3px);
 				}
 
 				&:nth-child(2) {
