--- a/wp-content/themes/hannashints/src/scss/view/_main.scss
+++ b/wp-content/themes/hannashints/src/scss/view/_main.scss
@@ -14,6 +14,19 @@ body {
 	&.logged-in {
 		margin-top: 46px;
 	}
+
+	&.search {
+		.page-header {
+			strong {
+				font-weight: 400;
+				text-transform: capitalize;
+			}
+		}
+
+		article:after {
+			margin: 25px 0;
+		}
+	}
 }
 
 .aligncenter {
