--- a/wp-content/themes/hannashints/src/scss/config/_variables.scss
+++ b/wp-content/themes/hannashints/src/scss/config/_variables.scss
@@ -25,6 +25,7 @@ $breakpoint-tiny: 480px;
 $breakpoint-small: 767px;
 $breakpoint-medium: 959px;
 $breakpoint-large: 1240px;
+$breakpoint-xl: 1400px;
 $breakpoint-huge: 1799px;
 
 $base-font: "Montserrat", sans-serif;
