--- a/splash/assets/main.css
+++ b/splash/assets/main.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, ../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -72,74 +72,376 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 200;
   color: #3f3f3f;
+  width: 100%;
+  overflow-x: hidden;
 }
-/* line 6, _splash.scss */
+/* line 8, _splash.scss */
 body .splash {
   display: block;
-  height: 100vh;
+  height: calc(100vh - 84px);
   background-image: url(./imgs/splash.jpg);
   background-color: #f2eaec;
-  background-size: cover;
+  background-size: 100%;
   background-repeat: no-repeat;
-  min-height: 1277px;
-  max-width: 1920px;
-  margin: auto;
+  min-height: 905px;
+  width: 1920px;
+  position: absolute;
+  top: 0;
+  left: calc(50% - 960px);
+  z-index: 1;
+}
+@media screen and (max-width: 1600px) {
+  /* line 8, _splash.scss */
+  body .splash {
+    width: 1600px;
+    left: calc(50% - 800px);
+    min-height: 815px;
+  }
 }
 @media screen and (max-width: 1400px) {
-  /* line 6, _splash.scss */
+  /* line 8, _splash.scss */
   body .splash {
-    max-width: 100%;
-    min-height: 934px;
-    background-size: 100%;
+    width: 1400px;
+    min-height: 740px;
+    left: calc(50% - 700px);
   }
 }
 @media screen and (max-width: 1240px) {
-  /* line 6, _splash.scss */
+  /* line 8, _splash.scss */
   body .splash {
-    min-height: 684px;
+    width: 1240px;
+    left: calc(50% - 620px);
+    min-height: 715px;
   }
 }
-/* line 27, _splash.scss */
-body .splash .wrapper {
+@media screen and (max-width: 1024px) {
+  /* line 8, _splash.scss */
+  body .splash {
+    width: 1024px;
+    left: calc(50% - 512px);
+    min-height: 605px;
+  }
+}
+@media screen and (max-width: 767px) {
+  /* line 8, _splash.scss */
+  body .splash {
+    width: 767px;
+    height: calc(100vh - 107px);
+    left: 0;
+    min-height: 461px;
+  }
+}
+@media screen and (max-width: 480px) {
+  /* line 8, _splash.scss */
+  body .splash {
+    width: 100%;
+    min-height: 381px;
+    height: calc(100vh - 127px);
+  }
+}
+/* line 60, _splash.scss */
+body .wrapper {
   max-width: 1400px;
+  height: 100%;
+  display: block;
+  position: relative;
+  z-index: 2;
 }
 @media screen and (max-width: 1400px) {
-  /* line 27, _splash.scss */
-  body .splash .wrapper {
+  /* line 60, _splash.scss */
+  body .wrapper {
     max-width: 1024px;
   }
 }
 @media screen and (max-width: 1240px) {
-  /* line 27, _splash.scss */
-  body .splash .wrapper {
+  /* line 60, _splash.scss */
+  body .wrapper {
     max-width: 767px;
   }
 }
-/* line 39, _splash.scss */
-body .splash .heading {
+/* line 77, _splash.scss */
+body .text {
   position: absolute;
-  top: 50%;
-  padding-left: 12%;
+  top: 59%;
 }
-@media screen and (max-width: 1400px) {
-  /* line 39, _splash.scss */
-  body .splash .heading {
-    top: 60%;
+@media screen and (max-width: 1600px) {
+  /* line 77, _splash.scss */
+  body .text {
+    top: 465px;
   }
 }
-/* line 49, _splash.scss */
-body .splash .heading > div:first-child, body .splash .heading > div:last-child {
+@media screen and (max-width: 1400px) {
+  /* line 77, _splash.scss */
+  body .text {
+    top: 400px;
+  }
+}
+@media screen and (max-width: 1240px) {
+  /* line 77, _splash.scss */
+  body .text {
+    top: 360px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  /* line 77, _splash.scss */
+  body .text {
+    top: 300px;
+  }
+}
+@media screen and (max-width: 767px) {
+  /* line 77, _splash.scss */
+  body .text {
+    top: 245px;
+    width: 100%;
+  }
+}
+@media screen and (max-width: 480px) {
+  /* line 77, _splash.scss */
+  body .text {
+    top: 170px;
+  }
+}
+/* line 106, _splash.scss */
+body .text .heading {
+  padding-left: 37%;
+}
+@media screen and (max-width: 1600px) {
+  /* line 106, _splash.scss */
+  body .text .heading {
+    padding-left: 43%;
+  }
+}
+@media screen and (max-width: 1400px) {
+  /* line 106, _splash.scss */
+  body .text .heading {
+    padding-left: 30%;
+  }
+}
+@media screen and (max-width: 1240px) {
+  /* line 106, _splash.scss */
+  body .text .heading {
+    padding-left: 15%;
+  }
+}
+@media screen and (max-width: 1024px) {
+  /* line 106, _splash.scss */
+  body .text .heading {
+    padding-left: 30%;
+  }
+}
+@media screen and (max-width: 767px) {
+  /* line 106, _splash.scss */
+  body .text .heading {
+    padding-left: 20%;
+  }
+}
+@media screen and (max-width: 480px) {
+  /* line 106, _splash.scss */
+  body .text .heading {
+    padding-left: 8%;
+  }
+}
+/* line 134, _splash.scss */
+body .text .heading > div:first-child, body .text .heading > div:last-child {
   font-size: 32px;
 }
-/* line 54, _splash.scss */
-body .splash .heading > div.gv {
+@media screen and (max-width: 1024px) {
+  /* line 134, _splash.scss */
+  body .text .heading > div:first-child, body .text .heading > div:last-child {
+    font-size: 24px;
+  }
+}
+@media screen and (max-width: 767px) {
+  /* line 134, _splash.scss */
+  body .text .heading > div:first-child, body .text .heading > div:last-child {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 480px) {
+  /* line 134, _splash.scss */
+  body .text .heading > div:first-child, body .text .heading > div:last-child {
+    font-size: 16px;
+  }
+}
+/* line 151, _splash.scss */
+body .text .heading > div.gv {
   font-family: "Great Vibes", cursive;
   font-size: 125px;
   color: #fe6f67;
   margin: 20px auto 0;
 }
-/* line 61, _splash.scss */
-body .splash .heading > div:last-child {
+@media screen and (max-width: 1024px) {
+  /* line 151, _splash.scss */
+  body .text .heading > div.gv {
+    font-size: 100px;
+  }
+}
+@media screen and (max-width: 767px) {
+  /* line 151, _splash.scss */
+  body .text .heading > div.gv {
+    font-size: 80px;
+  }
+}
+@media screen and (max-width: 480px) {
+  /* line 151, _splash.scss */
+  body .text .heading > div.gv {
+    font-size: 70px;
+  }
+}
+/* line 170, _splash.scss */
+body .text .heading > div:last-child {
   text-align: right;
   margin-right: -80px;
+}
+@media screen and (max-width: 767px) {
+  /* line 170, _splash.scss */
+  body .text .heading > div:last-child {
+    text-align: left;
+    margin-left: 207px;
+  }
+}
+@media screen and (max-width: 480px) {
+  /* line 170, _splash.scss */
+  body .text .heading > div:last-child {
+    margin-right: -60px;
+  }
+}
+/* line 186, _splash.scss */
+body .text .countdown {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+  padding-left: 18%;
+  width: 750px;
+  position: absolute;
+}
+@media screen and (max-width: 1024px) {
+  /* line 186, _splash.scss */
+  body .text .countdown {
+    margin-top: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  /* line 186, _splash.scss */
+  body .text .countdown {
+    margin-top: 12px;
+    width: 91vw;
+    padding-left: 9vw;
+  }
+}
+/* line 208, _splash.scss */
+body .text .countdown .digit {
+  text-align: center;
+  font-size: 18px;
+}
+@media screen and (max-width: 480px) {
+  /* line 208, _splash.scss */
+  body .text .countdown .digit {
+    font-size: 14px;
+  }
+}
+/* line 216, _splash.scss */
+body .text .countdown .digit .num {
+  font-weight: bold;
+  font-size: 50px;
+}
+@media screen and (max-width: 767px) {
+  /* line 216, _splash.scss */
+  body .text .countdown .digit .num {
+    font-size: 40px;
+  }
+}
+@media screen and (max-width: 480px) {
+  /* line 216, _splash.scss */
+  body .text .countdown .digit .num {
+    font-size: 32px;
+  }
+}
+/* line 232, _splash.scss */
+body footer.site-footer {
+  text-align: center;
+  background: url("./imgs/crosshatch.png") 0 0 repeat #fe6f67;
+  min-height: 107px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px 0px;
+}
+@media screen and (max-width: 767px) {
+  /* line 232, _splash.scss */
+  body footer.site-footer {
+    padding: 16px 10px;
+    max-width: 100vw;
+  }
+  /* line 245, _splash.scss */
+  body footer.site-footer .wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+@media screen and (max-width: 480px) {
+  /* line 252, _splash.scss */
+  body footer.site-footer .wrapper {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 767px) {
+  /* line 257, _splash.scss */
+  body footer.site-footer .footer-right {
+    width: 45%;
+  }
+}
+@media screen and (max-width: 480px) {
+  /* line 257, _splash.scss */
+  body footer.site-footer .footer-right {
+    width: 100%;
+  }
+}
+/* line 267, _splash.scss */
+body footer.site-footer .footer-left {
+  float: left;
+}
+@media screen and (max-width: 480px) {
+  /* line 267, _splash.scss */
+  body footer.site-footer .footer-left {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 480px) {
+  /* line 275, _splash.scss */
+  body footer.site-footer .copy {
+    display: block;
+    margin-top: 7px;
+  }
+}
+/* line 283, _splash.scss */
+body .site-title {
+  font-family: "Great Vibes", cursivep;
+  color: #fff;
+  font-size: 100px;
+}
+@media screen and (max-width: 1240px) {
+  /* line 283, _splash.scss */
+  body .site-title {
+    font-size: 75px;
+  }
+}
+@media screen and (max-width: 767px) {
+  /* line 283, _splash.scss */
+  body .site-title {
+    font-size: 50px;
+  }
+}
+/* line 297, _splash.scss */
+body .site-description {
+  color: #fff;
+  font-size: 18px;
+  display: block;
+  font-weight: 200;
+}
+@media screen and (max-width: 1240px) {
+  /* line 297, _splash.scss */
+  body .site-description {
+    font-size: 14px;
+  }
 }
