--- a/wp-content/themes/hannashints/src/scss/view/_main.scss
+++ b/wp-content/themes/hannashints/src/scss/view/_main.scss
@@ -366,8 +366,14 @@ hr,
 	padding: 20px;
 	background: $color-footer;
 
+	@include breakpoint(large) {
+		display: flex;
+		justify-content: space-between;
+	}
+
 	@include breakpoint(small) {
 		text-align: center;
+		flex-wrap: wrap;
 	}
 
 	p {
@@ -377,6 +383,10 @@ hr,
 	.footer-left {
 		display: inline-block;
 		vertical-align: middle;
+
+		@include breakpoint(small) {
+			width: 100%;
+		}
 	}
 
 	.footer-right {
@@ -386,8 +396,13 @@ hr,
 		margin-top: 1rem;
 		font-size: 14px;
 
+		@include breakpoint(large) {
+			width: 35%;
+		}
+
 		@include breakpoint(small) {
 			float: none;
+			width: 100%;
 		}
 	}	
 
