--- a/splash/assets/_splash.scss
+++ b/splash/assets/_splash.scss
@@ -76,7 +76,7 @@ body {
 
 	.text {
 		position: absolute;
-		top: 59%;
+		top: 555px;
 
 		@media screen and (max-width: 1600px) {
 			top: 465px;
@@ -241,15 +241,17 @@ body {
 		@media screen and (max-width: 767px) {
 			padding: 16px 10px;
 			max-width: 100vw;
+		}
 
-			.wrapper {
+		.wrapper {
+			height: auto!important;
+
+			@media screen and (max-width: 767px) {
 				display: flex;
 				justify-content: space-between;
 			}
-		}
 
-		@media screen and (max-width: 480px) {
-			.wrapper {
+			@media screen and (max-width: 480px) {
 				flex-wrap: wrap;
 			}
 		}
