--- a/splash/assets/main.css
+++ b/splash/assets/main.css
@@ -162,7 +162,7 @@ body .wrapper {
 /* line 77, _splash.scss */
 body .text {
   position: absolute;
-  top: 59%;
+  top: 555px;
 }
 @media screen and (max-width: 1600px) {
   /* line 77, _splash.scss */
@@ -373,66 +373,72 @@ body footer.site-footer {
     padding: 16px 10px;
     max-width: 100vw;
   }
-  /* line 245, _splash.scss */
+}
+/* line 246, _splash.scss */
+body footer.site-footer .wrapper {
+  height: auto !important;
+}
+@media screen and (max-width: 767px) {
+  /* line 246, _splash.scss */
   body footer.site-footer .wrapper {
     display: flex;
     justify-content: space-between;
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 252, _splash.scss */
+  /* line 246, _splash.scss */
   body footer.site-footer .wrapper {
     flex-wrap: wrap;
   }
 }
 @media screen and (max-width: 767px) {
-  /* line 257, _splash.scss */
+  /* line 259, _splash.scss */
   body footer.site-footer .footer-right {
     width: 45%;
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 257, _splash.scss */
+  /* line 259, _splash.scss */
   body footer.site-footer .footer-right {
     width: 100%;
   }
 }
-/* line 267, _splash.scss */
+/* line 269, _splash.scss */
 body footer.site-footer .footer-left {
   float: left;
 }
 @media screen and (max-width: 480px) {
-  /* line 267, _splash.scss */
+  /* line 269, _splash.scss */
   body footer.site-footer .footer-left {
     width: 100%;
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 275, _splash.scss */
+  /* line 277, _splash.scss */
   body footer.site-footer .copy {
     display: block;
     margin-top: 7px;
   }
 }
-/* line 283, _splash.scss */
+/* line 285, _splash.scss */
 body .site-title {
   font-family: "Great Vibes", cursivep;
   color: #fff;
   font-size: 100px;
 }
 @media screen and (max-width: 1240px) {
-  /* line 283, _splash.scss */
+  /* line 285, _splash.scss */
   body .site-title {
     font-size: 75px;
   }
 }
 @media screen and (max-width: 767px) {
-  /* line 283, _splash.scss */
+  /* line 285, _splash.scss */
   body .site-title {
     font-size: 50px;
   }
 }
-/* line 297, _splash.scss */
+/* line 299, _splash.scss */
 body .site-description {
   color: #fff;
   font-size: 18px;
@@ -440,7 +446,7 @@ body .site-description {
   font-weight: 200;
 }
 @media screen and (max-width: 1240px) {
-  /* line 297, _splash.scss */
+  /* line 299, _splash.scss */
   body .site-description {
     font-size: 14px;
   }
